2006-10-25  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* HttpUtil: Strings returned by get_cached now have a cached? method
	which returns true or false depending on whether the result was taken
	from the cache or not; this can be exploited by plugins that parse the
	result in some particular way, since they can now skip the parsing
	stage if they cache the parse result.

2006-10-24  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* HttpUtil: initial implementation of proper caching based on
	last-modified and etag HTTP headers

2006-10-17  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Salut plugin: handles (multilingual) salutations (hello/goodbye)

2006-10-15  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Language stuff: plugins can now handle language changes in a natural
	fashion. lart is the first plugin to make use of this. NOTE: this
	is not (yet) backwards compatible: the old larts/praises files from
	previous rbot setups have to be renamed manually
	* Language stuff: italian translations
	* Utils.safe_save(filename): allows 'safe' saving of a file: it needs a
	block, to which it will yield a temporary file on which operations can
	be carried out. When the block returns, the tempfile will be renamed to
	the given filename

2006-09-21  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* New Auth Framework: restore backwards compatibility: 'auth
	<masterpassword>' and 'login owner <masterpassword>' both work.
	* Topic plugin: cleanups. Implement 'topic undo'. 'topic undo' after a
	'topic undo' undoes the last undo.

2006-09-09  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* New Auth Framework: rbot was opping anyone who asked for it (opme
	plugin). Fixed, and cleaned up.

2006-09-01  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* New Auth Framework: document and fine tune permissions view the auth
	core botmodule.
	* Version: when run from a svn checkout, the bot now tries to report
	which svn revision it's at, and if there are local changes
