@@ -1,3 +1,9 @@
+2006-10-27  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>
+
+	* Flood protection: first attempt at penalty-based flood protection.
+	This should make rbot much less prone to Excess Floods *and* still
+	serve normally without excessive delays.
+
 2006-10-25  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>
 
 	* HttpUtil: Strings returned by get_cached now have a cached? method
